# Point-Cloud-Modelling

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  gitignore_template_unity3d
app/model-viewer-web/: .graphqlconfig.yml  README.md  package-lock.json  package.json  vue.config.js
app/model-viewer-web/potree/: .eslintrc  package-lock.json  package.json
app/model-viewer-web/public/: index.html
app/model-viewer-web/src/: App.vue  main.js
assets/: RedwoodTEQ  package.json
assets-service/: package-lock.json  package.json
assets/sample-model/: README.md
cli-service/: package-lock.json  package.json  tsconfig.json
cli-service/src/: app.ts
cli-service/src/common/: common.routes.config.ts
cli-service/src/models/: models.routes.config.ts
cli-service/src/users/: users.routes.config.ts
doc/: research.md
docker-images/cli-dockers/pdal-entwine/: .dockerignore  Dockerfile
docker-images/pcl-dev-docker/: README.md  build_image.sh  setup_container.sh  start_container.sh
docker-images/pcl-dev-docker/example_projects/smooth_resample_noisy_data_mls/: CMakeLists.txt  resampling_mls.cpp
named_pipe_test/: README.md
named_pipe_test/client_dotnet/: Program.cs
named_pipe_test/server/: .gitignore  Program.cs
note/: catchup.md
unity3d_viewer/: .gitignore  link.xml
unity3d_viewer/Assets/: link.xml
unity3d_viewer/Assets/Scenes/: Main.unity
unity3d_viewer/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
viewer/kiss3d_viewer/: Cargo.toml  readme.md
viewer/kiss3d_viewer/src/: main.rs
(+297 files in other folders)
